# audiotranscriber

./: README.md
audio-transcriber/: Makefile  README.md  pyproject.toml  requirements.txt
audio-transcriber/src/audio_transcriber/: __init__.py  app.py  cli.py  pipeline.py  server.py  srt.py  transcriber.py  translator.py
audio-transcriber/templates/: index.html
audio-transcriber/tests/: test_pipeline_unit.py  test_srt.py
